tests/errors/compiler/wrong_printf_param_number/more_parameters.c
void main() 
{
    int x;
    printf("%i", x, x + 1);
}
